--- a/AV/Development/sortingExercises/orderOfGrowthEasy.json
+++ b/AV/Development/sortingExercises/orderOfGrowthEasy.json
@@ -3,12 +3,12 @@
     "en": {
       ".exerciseTitle": "Order of Growth",
       ".instructLabel": "Instructions:",
-      ".instructions": "Rank the functions by order of growth, from the lowest rate of growth to the highest rate of growth. Note that if the functions are used to measure running time, then low rates of growth correspond to faster running times for large N, so that f<sub>1</sub>(N) &lt; f<sub>2</sub>(N) &lt; ... &lt; f<sub>10</sub>(N)."
+      ".instructions": "Rank the functions by order of growth, from the lowest rate of growth on top to the highest rate of growth at bottom. Note that if the functions are used to measure running time, then low rates of growth correspond to faster running times for large N, so that f<sub>1</sub>(N) &lt; f<sub>2</sub>(N) &lt; ... &lt; f<sub>10</sub>(N)."
     },
     "fi": {
       ".exerciseTitle": "Funktioiden luokittelu",
       ".instructLabel": "Ohjeet:",
-      ".instructions": "Laita seuraavat funktiot niiden kasvunopeuden mukaiseen järjestykseen hitaimmasta nopeimpaan. Merkinnät <b>log</b>, <b>ln</b> ja <b>lg</b> tarkoittavat 2-, e- ja 10-kantaisia logaritmeja, vastaavasti. Huomaa, että jos funktiot kuvaisivat algoritmien suoritusaikaa, niin hitaimman kasvunopeuden omaava funktio vastaa nopeinta suoritusaikaa siten, että suurilla N:n arvoilla f<sub>1</sub>(N) &lt; f<sub>2</sub>(N) &lt; ... &lt; f<sub>10</sub>(N)."
+      ".instructions": "Laita seuraavat funktiot niiden kasvunopeuden mukaiseen järjestykseen: hitaimmin kasvava ylimmäksi, nopeimmin kasvava alimmaksi. Merkinnät <b>log</b>, <b>ln</b> ja <b>lg</b> tarkoittavat 2-, e- ja 10-kantaisia logaritmeja, vastaavasti. Huomaa, että jos funktiot kuvaisivat algoritmien suoritusaikaa, niin hitaimman kasvunopeuden omaava funktio vastaa nopeinta suoritusaikaa siten, että suurilla N:n arvoilla f<sub>1</sub>(N) &lt; f<sub>2</sub>(N) &lt; ... &lt; f<sub>10</sub>(N)."
     }
   },
   "code": {
